--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./Develop/assets/css/style.css">
     <title>Horiseon Marketing Agency</title>
 </head>
 
@@ -30,7 +30,7 @@
          <!-- new class box for same styling  -->
         <div id="search-engine-optimization" class="box">
             <!-- add image alt text  -->
-            <img src="./assets/images/search-engine-optimization.jpg" alt="Brainstorming SEO benefits written on notebook placed on desk" class="float-left" />
+            <img src="Develop/assets/images/search-engine-optimization.jpg" alt="Brainstorming SEO benefits written on notebook placed on desk" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -38,7 +38,7 @@
         </div>
         <div id="online-reputation-management" class="box">
            <!-- add image alt text  -->
-            <img src="./assets/images/online-reputation-management.jpg" alt="Person sits at desk reading an increasing reputation growth chart on computer" class="float-right" />
+            <img src="Develop/assets/images/online-reputation-management.jpg" alt="Person sits at desk reading an increasing reputation growth chart on computer" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -46,7 +46,7 @@
         </div>
         <div id="social-media-marketing" class="box">
            <!-- add image alt text  -->
-            <img src="./assets/images/social-media-marketing.jpg" alt="several people sitting at a desk with common social media words like tweet/share on printouts" class="float-left" />
+            <img src="Develop/assets/images/social-media-marketing.jpg" alt="several people sitting at a desk with common social media words like tweet/share on printouts" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -58,7 +58,7 @@
         <section class="benefits-type">
             <h3>Lead Generation</h3>
             <!-- add image alt text  -->
-            <img src="./assets/images/lead-generation.png" alt="churning wheel on top of arrow pointing down to money sign" />
+            <img src="Develop/assets/images/lead-generation.png" alt="churning wheel on top of arrow pointing down to money sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -66,7 +66,7 @@
         <section class="benefits-type">
             <h3>Brand Awareness</h3>
             <!-- add image alt text  -->
-            <img src="./assets/images/brand-awareness.png" alt="lightbulb with signal rays replaces the head on the top half of a business person"/>
+            <img src="Develop/assets/images/brand-awareness.png" alt="lightbulb with signal rays replaces the head on the top half of a business person"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -74,7 +74,7 @@
         <section class="benefits-type">
             <h3>Cost Management</h3>
             <!-- add image alt text  -->
-            <img src="./assets/images/cost-management.png" alt="large wheel cog on top of three money signs " />
+            <img src="Develop/assets/images/cost-management.png" alt="large wheel cog on top of three money signs " />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
